--- a/lecture1/lecture1.tex
+++ b/lecture1/lecture1.tex
@@ -24,20 +24,20 @@
 \begin{definition}~\\
     Функция $f\colon \{0, 1\}^{k(n)} \rightarrow \{0, 1\}^{l(n)}$ называется сильно односторонней, если $f$ вычисляется за время $poly(n)$ и
     $$
-        \forall p \forall\{Rn\}_{n = 1}^{\infty} \exists N \forall n > N Pr_{x \in \{0, 1\}^{k(n)}}\{f(Rn(f(x))) = f(x)\} < \frac{1}{p(n)}
+        \forall p\ \forall\{R_n\}_{n = 1}^{\infty}\ \exists N\ \forall n > N\ Pr_{x \in \{0, 1\}^{k(n)}}\{f(R_n(f(x))) = f(x)\} < \frac{1}{p(n)}
     $$
     
-  \noindent $Rn$ - семейства схем полиномиального размера
+  \noindent $R_n$ - семейство схем полиномиального размера
 \end{definition}
 
 
 \begin{definition}~\\
     Функция $f\colon \{0, 1\}^{k(n)} \rightarrow \{0, 1\}^{l(n)}$ называется слабо односторонней, если $f$ вычисляется за время $poly(n)$ и 
     $$
-        \exists q \forall\{Rn\}_{n = 1}^{\infty} \exists N \forall n > N Pr_{x \in \{0, 1\}^{k(n)}}\{f(Rn(f(x))) = f(x)\} < 1 - \frac{1}{q(n)}
+        \exists q\ \forall\{R_n\}_{n = 1}^{\infty}\ \exists N\ \forall n > N\ Pr_{x \in \{0, 1\}^{k(n)}}\{f(R_n(f(x))) = f(x)\} < 1 - \frac{1}{q(n)}
         $$
     
-  \noindent $Rn$ - семейства схем полиномиального размера
+  \noindent $R_n$ - семейство схем полиномиального размера
 \end{definition}
 
 
@@ -51,13 +51,13 @@
 \end{claim}
 
 \begin{proof}~\\
-    $L = \{y \in \{0, 1\}^{l(n)} \colon \exists x \in \{0, 1\}^{k(n)} f(x) = y\} \in NP$
+    $L = \{y \in \{0, 1\}^{l(n)} \colon\ \exists x \in \{0, 1\}^{k(n)}\ f(x) = y\} \in NP$
     
     \noindent Если $P = NP$, то соответсвующая задача поиска решается за полиномиальное время. А эта задача обращает $f(x)$.
 \end{proof}
 
 \begin{claim}~\\
-    Если $f$ - одностороння функция, то $h(x) = f(x)0\ldots0$ ($l(n)$ нулей) - односторонняя функция.
+    Если $f$ - односторонняя функция, то $h(x) = f(x)0\ldots0$ ($l(n)$ нулей) - односторонняя функция.
 \end{claim}
 
 \begin{proof}~\\
@@ -65,7 +65,7 @@
 \end{proof}
 
 \begin{claim}~\\
-    Если $f$ - одностороння функция, то $h(x) = f(x)f(x)$ (конкатенация) - односторонняя функция.
+    Если $f$ - односторонняя функция, то $h(x) = f(x)f(x)$ (конкатенация) - односторонняя функция.
 \end{claim}
 
 \begin{proof}~\\
@@ -75,10 +75,10 @@
 \begin{definition}~\\
     Функция $f\colon \{0, 1\}^{k(n)} \rightarrow \{0, 1\}^{l(n)}$ называется сильно односторонней в вероятностной схеме, если $f$ вычисляется за время $poly(n)$ и
     $$
-        \forall p \forall\{Rn\}_{n = 1}^{\infty} \exists N \forall n > N Pr_{x \in \{0, 1\}^{k(n)}, r}\{f(Rn(f(x), r)) = f(x)\} < \frac{1}{p(n)}
+        \forall p\ \forall\{R_n\}_{n = 1}^{\infty}\ \exists N\ \forall n > N\ Pr_{x \in \{0, 1\}^{k(n)}, r}\{f(R_n(f(x), r)) = f(x)\} < \frac{1}{p(n)}
     $$
     
-  \noindent $Rn$ - семейства схем полиномиального размера
+  \noindent $R_n$ - семейство схем полиномиального размера
 \end{definition}
 
 \begin{remark}~\\
@@ -117,7 +117,7 @@
 \end{idea}
 
 \begin{proof}~\\
-    Нужно по рбратиелю $F$ построить обратитель $f$.~\\
+    Нужно по обратиелю $F$ построить обратитель $f$.~\\
     $S(y)\colon$ запуск $R(y, f(x_2),\ldots,f(x_N))$, проверка успешности~\\
     запуск $R(y, f(x_2),\ldots,f(x_N))$, проверка успешности~\\
     запуск $R(y, f(x_2),\ldots,f(x_N))$, проверка успешности~\\
@@ -127,7 +127,7 @@
     \begin{claim}~\\
         Если $R$ успешен с вероятностью $\ge \frac{1}{p(n)}$, то~\\
         $$
-            \forall q \exists m S \textup{успешен с вероятностью} \ge 1 - \frac{1}{q(n)}
+            \forall q\ \exists m\ S\ \textup{успешен с вероятностью} \ge 1 - \frac{1}{q(n)}
         $$
     \end{claim}
     
